src/objects/wellInterestAllocation__c.object
<CustomObject>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>unitAllocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Allocation</label>
        <referenceTo>unitAllocation__c</referenceTo>
        <relationshipLabel>Well Interest Allocation</relationshipLabel>
        <relationshipName>Well_Interest_Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>well__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Well</label>
        <referenceTo>Well__c</referenceTo>
        <relationshipLabel>Well Interest Allocation</relationshipLabel>
        <relationshipName>Well_Interest_Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Well Interest Allocation</label>
    <nameField>
        <displayFormat>WIA-{000000}</displayFormat>
        <label>Well interest Allocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Well Interest Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>